--- a/belajar-html/final-project/cv-rifai/assets/css/style.css
+++ b/belajar-html/final-project/cv-rifai/assets/css/style.css
@@ -217,14 +217,14 @@ img {
 @media screen and (max-width: 1150px){
   .nav__menu{
     position: fixed;
-    top: 0;
+    top: -100%;
     left: 0;
     background-color: hsl(0, 0%, 0%, .75);
     width: 100%;
     padding-block: 1.8rem 5rem;
     text-align: center;
     backdrop-filter: blur(8px);
-    transition: .4;
+    transition: .4s;
   }
 }
 
@@ -292,8 +292,22 @@ left: -4rem;
 .nav__link:hover{
   color: var(--white-color);
 }
-/* Show menu */
 
+.nav__link:hover::after{
+  width: 25%;
+}
+
+.nav__close{
+  position: absolute;
+  font-size: 1.5rem;
+  top: 1rem;
+  right: 1.5rem;
+  cursor: pointer;
+}
+/* Show menu */
+.show-menu{
+  top: 0;
+}
 
 /* Add shadow header */
 
