--- a/belajar-html/final-project/cv-rifai/assets/css/style.css
+++ b/belajar-html/final-project/cv-rifai/assets/css/style.css
@@ -316,8 +316,39 @@ left: -4rem;
 
 
 /*=============== HOME ===============*/
+.home__container{
+  padding-top: 2rem;
+}
 
+.home__name{
+  font-size: var(--biggest-font-size);
+  text-align: center;
+}
 
+.home__profile{
+  position: relative;
+  justify-self: center;
+}
+
+.home__image{
+  width: 220px;
+}
+
+.home__img{
+  position: relative;
+  z-index: 10;
+}
+
+.home__shadow{
+  width: 100%;
+  height: 100%;
+  background-color: var(--container-color);
+  position: absolute;
+  bottom: -.75rem;
+  right: -.75rem;
+  border: 4px solid var(--black-color);
+  z-index: 5;
+}
 /* Animate scroll icon */
 
 
