--- a/belajar-html/final-project/cv-rifai/assets/css/style.css
+++ b/belajar-html/final-project/cv-rifai/assets/css/style.css
@@ -310,7 +310,9 @@ left: -4rem;
 }
 
 /* Add shadow header */
-
+.shadow-header{
+  box-shadow: 0 1px 16px hsla(0, 0%, 0%, .12);
+}
 
 /* Active link */
 
