--- a/belajar-html/final-project/cv-rifai/assets/css/style.css
+++ b/belajar-html/final-project/cv-rifai/assets/css/style.css
@@ -463,7 +463,71 @@ left: -4rem;
 
 
 /*=============== ABOUT ===============*/
+.about {
+  background-color: var(--container-color);
+  transition: background-color 0.4s;
+}
 
+.about__container {
+  row-gap: 0;
+}
+
+.about__profile {
+  position: relative;
+  justify-self: center;
+  margin-block: 2.5rem 4.5rem;
+}
+
+.about__image {
+  width: 220px;
+}
+
+.about__img {
+  position: relative;
+  border: 4px solid var(--white-color);
+  z-index: 1;
+}
+
+.about__shadow,
+.about__line,
+.about__box {
+  position: absolute;
+}
+
+.about__shadow {
+  width: 150px;
+  height: 470px;
+  background-color: var(--body-color);
+  top: -2.5rem;
+  right: -3.5rem;
+  border-bottom: 4px solid var(--first-color);
+  transition: background-color 0.4s;
+}
+
+.about__profile .geometric-box {
+  top: 1.5rem;
+  right: -2.8rem;
+}
+
+.about__line {
+  filter: invert(1);
+  right: -1.25rem;
+  top: 6rem;
+  width: 50px;
+  transition: filter 0.4s;
+}
+
+.about__box {
+  width: 40px;
+  height: 40px;
+  background-color: var(--first-color);
+  right: -0.5rem;
+  bottom: 1.5rem;
+}
+
+.about__info{
+  padding-left: 1.25rem;
+}
 
 /*=============== SERVICES ===============*/
 
