--- a/belajar-html/final-project/cv-rifai/assets/css/style.css
+++ b/belajar-html/final-project/cv-rifai/assets/css/style.css
@@ -460,7 +460,44 @@ left: -4rem;
 }
 
 /*=============== BUTTON ===============*/
+.button,
+.button__ghost{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+}
 
+.button{
+  background-color: var(--black-color);
+  padding: 1.1rem 1.5rem;
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+  transition: background-color .4s;
+}
+
+.button:hover {
+  background-color:  var(--first-color);
+}
+
+.button i{
+  font-size: 1.25rem;
+}
+
+.button__ghost{
+  border: 3px solid var(--black-color);
+  color: var(--black-color);
+  padding: .5rem;
+  transition: border .4s, color .4s;
+}
+
+.button__ghost i{
+  font-size: 1.25rem;
+}
+
+.button__ghost:hover{
+  border: 3px solid  var(--first-color);
+}
 
 /*=============== ABOUT ===============*/
 .about {
@@ -527,6 +564,35 @@ left: -4rem;
 
 .about__info{
   padding-left: 1.25rem;
+}
+
+.about__description{
+  position: relative;
+  color: var(--title-color);
+  margin-bottom: 1.5rem;
+}
+
+.about__description::after{
+  content: '';
+  width: 20px;
+  height: 1px;
+  background-color: var(--title-color);
+  position: absolute;
+  left: -1.75rem;
+  top: .5rem;
+}
+
+.about__list{
+  list-style: square;
+  color: var(--title-color);
+  margin-bottom: 3rem;
+}
+
+.about__buttons{
+  display: flex;
+  justify-content: center;
+  column-gap: 1rem;
+  align-items: center;
 }
 
 /*=============== SERVICES ===============*/
